--- a/.github/workflows/test-patrol-automation-real.yaml
+++ b/.github/workflows/test-patrol-automation-real.yaml
@@ -8,47 +8,50 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # # 1. ดึง Source Code ของโปรเจกต์คุณ
       # - name: Checkout Code
       #   uses: actions/checkout@v4
 
-      # - name: Setup SSH Keys
-      #   uses: webfactory/ssh-agent@v0.9.0
-      #   with:
-      #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      # 2. ติดตั้ง Java (จำเป็นสำหรับ Android SDK และ Gradle)
+      - name: Setup Java
+        uses: actions/setup-java@v4
+        with:
+          distribution: "zulu"
+          java-version: "17" # แนะนำเวอร์ชัน 17 สำหรับ Android Build ปัจจุบัน
 
-      # - name: Set up Java 17
-      #   uses: actions/setup-java@v4
-      #   with:
-      #     distribution: "temurin"
-      #     java-version: "17"
+      # 3. ติดตั้ง Flutter และ Dart พื้นฐานเข้าไปใน Runner
+      - name: Setup Flutter and Dart
+        uses: subosito/flutter-action@v2
+        with:
+          channel: "stable"
+          cache: true
 
+      # 4. ติดตั้ง FVM (เนื่องจากคุณใช้ fvm flutter doctor ใน script)
+      - name: Install FVM
+        run: dart pub global activate fvm
+
+      # 5. ติดตั้ง Flutter SDK ตามเวอร์ชันในไฟล์ .fvm/fvm_config.json
+      - name: Install Flutter SDK via FVM
+        run: fvm install
+
+      # 6. ติดตั้ง Patrol CLI และตั้งค่า PATH
+      - name: Setup Patrol CLI
+        run: |
+          dart pub global activate patrol_cli
+          # เพิ่ม PATH เพื่อให้สามารถเรียกใช้คำสั่ง 'patrol' ได้โดยตรง
+          echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
+
+      # 7. ตั้งค่า Android SDK ตาม Script เดิมของคุณ
       - name: Setup Android SDK
         run: |
           echo "🤖 Accepting Licenses and Installing Android SDK Components..."
           echo "y" | $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager --licenses
           $ANDROID_HOME/cmdline-tools/latest/bin/sdkmanager "platforms;android-36" "build-tools;36.1.0" "platform-tools"
 
-      # - name: Install FVM
-      #   run: |
-      #     curl -fsSL https://fvm.app/install.sh | bash
-      #     echo "$HOME/fvm/bin" >> $GITHUB_PATH
-
-      # - name: Setup Flutter via FVM
-      #   run: |
-      #     fvm install
-      #     fvm flutter config --android-sdk $ANDROID_HOME
-      #     echo "y" | fvm flutter doctor --android-licenses
-
-      # - name: Install Patrol CLI
-      #   run: |
-      #     fvm flutter pub global activate patrol_cli
-      #     # แอดเข้า $GITHUB_PATH เพื่อให้เรียกคำสั่ง patrol ตรงๆ ได้ใน step ถัดไป
-      #     echo "$HOME/.pub-cache/bin" >> $GITHUB_PATH
-
+      # 8. ตรวจสอบความพร้อมของระบบ
       - name: Check Patrol Doctor and Flutter Doctor
         run: |
           echo "🚀 Final Check with Patrol Doctor..."
           patrol doctor
-
           echo "🚀 Final Check with Flutter Doctor..."
           fvm flutter doctor -v
